# nym-jni-android

./: .gitignore  LICENSE  README.md  cloc.sh
nym-android-port/: .gitignore  README.md  beforeAppBuild.sh  build.gradle  collect_android_data_phy.sh  collect_android_data_phy_adbtcp.sh  collect_android_data_phy_adbusb.sh  collect_android_data_phy_experiments.sh  generateConstantsFiles.sh  keystore.properties.example  local.properties.example  settings.gradle
nym-android-port/NymAndroidPort/: build.gradle
nym-android-port/NymAndroidPort/src/androidTest/java/com/kaeonx/nymandroidport/: ExampleInstrumentedTest.kt
nym-android-port/NymAndroidPort/src/main/java/com/kaeonx/nymandroidport/database/: KeyStringValuePair.kt  NymBinaryMessageReceived.kt  NymDatabase.kt  NymEnqueuedOutgoingTextMessage.kt  NymEnqueuedOutgoingTextMessageDAO.kt  NymTextMessageReceived.kt
nym-android-port/NymAndroidPort/src/main/java/com/kaeonx/nymandroidport/jni/: NymHandler.kt
nym-android-port/NymAndroidPort/src/main/java/com/kaeonx/nymandroidport/repositories/: MessageRepository.kt
nym-android-port/NymAndroidPort/src/main/java/com/kaeonx/nymandroidport/services/: IPCConstants.kt  NymRunService.kt  NymRunWorker.kt  NymWebSocketBoundService.kt  NymWebSocketClient.kt
nym-android-port/NymAndroidPort/src/main/java/com/kaeonx/nymandroidport/utils/: NymRunState.kt
nym-android-port/app/: build.gradle  proguard-rules.pro
nym-android-port/app/src/androidTest/java/com/kaeonx/nymandroidport/: DatabaseContactDAOInstrumentedTest.kt  DatabaseKeyStringValuePairDAOInstrumentedTest.kt  DatabaseMessageDAOInstrumentedTest.kt  ExampleInstrumentedTest.kt  JNIInstrumentedTest.kt  PreRequisiteInstrumentedTest.kt  ReceivingNonNullableFromRustInstrumentedTest.kt  ReceivingNullableFromRustInstrumentedTest.kt  SendingNonNullableToRustInstrumentedTest.kt  SendingNullableToRustInstrumentedTest.kt
nym-android-port/app/src/androidTest/java/com/kaeonx/nymchatprototype/: PreRequisiteInstrumentedTest.kt  ReceivingNonNullableFromRustInstrumentedTest.kt  ReceivingNullableFromRustInstrumentedTest.kt  SendingNonNullableToRustInstrumentedTest.kt  SendingNullableToRustInstrumentedTest.kt
nym-android-port/app/src/main/: AndroidManifest.xml
nym-android-port/app/src/main/java/com/kaeonx/nymandroidport/: FirstFragment.kt  JNIHandler.kt  MainActivity.kt  NAPDestination.kt  NAPNavHost.kt  NymAndroidPortApp.kt  NymApplication.kt  NymHandler.kt  NymTestHandler.kt  SecondFragment.kt  SphinxConstants.kt  SphinxHandler.kt
nym-android-port/app/src/main/java/com/kaeonx/nymandroidport/autogenerated/: ExperimentParameters.kt
nym-android-port/app/src/main/java/com/kaeonx/nymandroidport/components/: Home.kt
nym-android-port/app/src/main/java/com/kaeonx/nymandroidport/database/: AppDatabase.kt  Contact.kt  ContactDAO.kt  KeyStringValuePair.kt  KeyStringValuePairDAO.kt  Message.kt  MessageDAO.kt
nym-android-port/app/src/main/java/com/kaeonx/nymandroidport/datasources/: NymMessageLocalDataSource.kt  NymMessageRemoteDataSource.kt
nym-android-port/app/src/main/java/com/kaeonx/nymandroidport/jni/: NymHandler.kt
nym-android-port/app/src/main/java/com/kaeonx/nymandroidport/repositories/: ContactRepository.kt  KeyStringValuePairRepository.kt  MessageRepository.kt  NymMessageRepository.kt  NymRepository.kt
nym-android-port/app/src/main/java/com/kaeonx/nymandroidport/services/: ADBForegroundService.kt  NymRunForegroundService.kt  NymRunService.kt  NymRunWorker.kt  NymWebSocketBoundService.kt  NymWebSocketClient.kt
nym-android-port/app/src/main/java/com/kaeonx/nymandroidport/ui/: Color.kt  Shape.kt  Theme.kt  Type.kt
nym-android-port/app/src/main/java/com/kaeonx/nymandroidport/utils/: IPCConstants.kt  NymAddress.kt  NymBinaryMessageReceived.kt  NymMessageToSend.kt  NymTextMessageReceived.kt  ViewModelFactory.kt
nym-android-port/app/src/main/java/com/kaeonx/nymandroidport/workers/: NymRunWorker.kt  NymWebSocketWorker.kt
nym-android-port/app/src/main/java/com/kaeonx/nymchatprototype/: MainActivity.kt  NAPDestination.kt  NAPNavHost.kt  NymApplication.kt  NymChatPrototypeApp.kt
nym-android-port/app/src/main/java/com/kaeonx/nymchatprototype/database/: AppDatabase.kt  Contact.kt  ContactDAO.kt  KeyStringValuePair.kt  KeyStringValuePairDAO.kt  Message.kt  MessageDAO.kt
nym-android-port/app/src/main/res/drawable/: ic_baseline_cloud_sync_24.xml
nym-android-port/app/src/main/res/layout/: activity_main.xml
nym-android-port/app/src/main/res/menu/: menu_main.xml
nym-android-port/app/src/main/res/navigation/: nav_graph.xml
nym-android-port/app/src/main/res/values/: strings.xml  themes.xml
nym-android-port/app/src/main/res/values-night/: themes.xml
nym-android-port/app/src/test/java/com/kaeonx/nymandroidport/: ExampleUnitTest.kt
nym-android-port/app/src/test/java/com/kaeonx/nymchatprototype/: ExampleUnitTest.kt
nym-android-port/gradle/wrapper/: gradle-wrapper.properties
nym-jni/: .gitignore  Cargo.toml  README.md  bacon.toml
nym-jni/.cargo/: config.toml
nym-jni/src/: android_instrumented_tests.rs  jvm_kotlin_typing.rs  lib.rs  main.rs  nym_init.rs  nym_run.rs  utils.rs
nym-jni/src/android_config/: mod.rs  template.rs
nym-jni/src/android_instrumented_tests/: pre_requisite.rs  receiving_non_nullable_from_kotlin.rs  receiving_nullable_from_kotlin.rs  sending_non_nullable_to_kotlin.rs  sending_nullable_to_kotlin.rs
nym-jni/src/clients_client_core_src/: init.rs  mod.rs
nym-jni/src/clients_native_src/: mod.rs
nym-jni/src/clients_native_src/client/: mod.rs
nym-jni/src/clients_native_src/client/config/: mod.rs  template.rs
nym-jni/src/clients_native_src/commands/: init.rs  mod.rs  run.rs
nym-jni/src/clients_native_src/websocket/: handler.rs  listener.rs  mod.rs
nym-jni/src/jvm_kotlin_typing/: wrapper_macros.rs
nym-jni/src/utils/: non_nullable_converters.rs  nullable_converters.rs  wrapper_macros.rs
nym-pc/: .gitignore  Cargo.toml  README.md  collect_pc_data.sh  collect_pc_data_experiments.sh  communicate_with_android_client.py
nym-pc/src/: main.rs
(+44 files in other folders)
