[package]
name = "nym-jni"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.20.0"
anyhow = "1.0.68"
nym-client = { git = "https://github.com/nymtech/nym", rev = "b7aa84c" }
client-core = { git = "https://github.com/nymtech/nym", rev = "b7aa84c" }
network-defaults = { git = "https://github.com/nymtech/nym", rev = "b7aa84c" }
config = { git = "https://github.com/nymtech/nym", rev = "b7aa84c" }
serde = "1.0.151"
# https://stackoverflow.com/a/72187658: Non-vendored version depends on local installation of
# OpenSSL, which is not suitable for cross-compilation.
openssl = { version = "0.10.45", features = ["vendored"] }

log = "0.4.17"
android_logger = "=0.11.1"  # 0.11.3 is broken
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tracing-android = "0.2.0"  # provides a tracing layer that can connect to Android Studio's logcat
tokio = { version = "1.23.0", features = ["rt"] }  # necessary for async functions to execute properly on aarch64

[lib]
crate_type = ["cdylib"]
